# substreams.database.protoc-bug

./: .gitignore  Cargo.toml  Makefile  README.md  buf.gen.yaml  rust-toolchain.toml  substreams.yaml
src/: lib.rs
src/pb/: mod.rs
