[package]
name = "substreams-nft-tracker"
version = "0.1.0"
description = "Substreams for Ethereum NFTs"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.79"
prost = "0.11"
prost-types = "0.11"
hex = "0.4.3"
substreams = "0.5.4"
substreams-ethereum = "0.9"
substreams-database-change = "1.0.0"
substreams-entity-change = "1.0.0"
num-bigint = "0.4"
bigdecimal = "0.3"
pad = "0.1"
ethabi = "18.0.0"
chrono = { version = "0.4", features = [ "std" ], default-features = false }
anyhow = "1"
serde = "1.0.152"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.9"
