[package]
name = "substreams-nft-tracker"
version = "0.1.0"
description = "Substreams for Ethereum NFTs"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.79"
prost = "0.11"
substreams = "0.5.4"
substreams-ethereum = "0.9"
substreams-database-change = "1.0.0"
serde = "1.0.152"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
substreams-ethereum = "0.9"
